--- a/Table(2).html
+++ b/Table(2).html
@@ -6,13 +6,13 @@
 
     <title>Make A Form</title>
 
-    <link rel="Stylesheet" href="D:/Ajaypal Singh/Study/Table.css">
+    <link rel="Stylesheet" href="Table.css">
 
   </head>
 
   <body>
 
-    <h2>Table Of Top Five Corona Country's In World:</h2>
+    <h2 style="text-align: center;">Table Of Top Five Corona Country's In World:</h2>
 
     <table border="10px" class="Image">
 
@@ -77,18 +77,38 @@
     </table>
 
     <br/>
+   
+    <h2 style="text-align: center;">#United State's:</h2>
 
-    <h2>#United State's:</h3>
+    <img src="United States.jpg" alt="United States Map" id="image"/>
 
-    <img src="D:/Ajaypal Singh/Fun/United States.jpg" alt="United State's" id="image" align="center">
-
+    <div class="div1">
+ 
     <p>Total Population Of United States:- 32.82 Crores</p>
 
     <p>Total Corona Case's In United State's:- 4652993 lakhs</p>
 
-    <p>Population Rank Of United State's:- 03 
+    <p>Population Rank Of United State's:- 03</p>
 
     <p>Region:- Nouth America</p>
+
+    </div>
+
+    <div class="div2">
+
+    <h2>#Brazil</h2>
+
+    <img src="Brazil.jpg" alt="Brazil Map" id="brazil"/>
+
+    <p>Total Population Brazil:- 32.82 Crores</p>
+
+    <p>Total Corona Case's In Brazil:- 4652993 lakhs</p>
+
+    <p>Population Rank Of Brazil:- 03</p>
+
+    <p>Region:- South America</p>
+
+    </div>
 
   </body>
 
