--- a/Table(2).html
+++ b/Table(2).html
@@ -12,9 +12,9 @@
 
   <body>
 
-    <h2 style="text-align: center;">Table Of Top Five Corona Country's In World:</h2>
+    <h1 id="style">Table Of Top Five Corona Country's In World:</h1>
 
-    <table border="10px" class="Image">
+    <table>
 
       <tbody>
 
@@ -80,33 +80,81 @@
    
     <h2 style="text-align: center;">#United State's:</h2>
 
-    <img src="United States.jpg" alt="United States Map" id="image"/>
+    <img id="image"src="United States.jpg" alt="United States Map" />
 
     <div class="div1">
  
-    <p>Total Population Of United States:- 32.82 Crores</p>
+      <p>Total Population Of United States:- 32.82 Crores</p>
 
-    <p>Total Corona Case's In United State's:- 4652993 lakhs</p>
+      <p>Total Corona Case's In United State's:- 4652993 lakhs</p>
 
-    <p>Population Rank Of United State's:- 03</p>
+      <p>Population Rank Of United State's:- 03</p>
 
-    <p>Region:- Nouth America</p>
+      <p>Region:- Nouth America</p>
 
     </div>
 
     <div class="div2">
 
-    <h2>#Brazil</h2>
+      <h2 id="brazil">#Brazil</h2>
 
-    <img src="Brazil.jpg" alt="Brazil Map" id="brazil"/>
+      <img src="Brazil.jpg" alt="Brazil Map" />
 
-    <p>Total Population Brazil:- 32.82 Crores</p>
+      <p>Total Population Brazil:- 20.95 Crores</p>
 
-    <p>Total Corona Case's In Brazil:- 4652993 lakhs</p>
+      <p>Total Corona Case's In Brazil:- 2613789 lakhs</p>
 
-    <p>Population Rank Of Brazil:- 03</p>
+      <p>Population Rank Of Brazil:- 05</p>
 
-    <p>Region:- South America</p>
+      <p>Region:- South America</p>
+
+    </div>
+
+    <div class="div3">
+
+      <h2 id="india">#India</h2>
+
+      <img src="India.jpg" alt="Indian map" />
+
+      <p>Total Population Of India:- 135.26 Crores</p>
+
+      <p>Total Corona Case's In India:- 1690546</p>
+
+      <p>Population Rank Of India:- 02</p>
+
+      <p>Region:- Asia</p>
+
+    </div>
+
+    <div class="div4">
+
+      <h2 id="russia">#Russia</h2>
+
+      <img src="Russia.jpg" alt="Russia Map" />
+
+      <p>Total Population Russia:- 14.45 Crores</p>
+
+      <p>Total Corona Case's In Russia:- 839981 lakhs</p>
+
+      <p>Population Rank Of Russia:- 09</p>
+
+      <p>Region:- Europe</p>
+
+    </div>
+
+    <div class="div5">
+
+      <h2 id="southafrica">#South Africa</h2>
+
+      <img src="South Africa.jpg" alt="South Africa Map" />
+
+      <p>Total Population South Africa:- 5.78 Crores</p>
+
+      <p>Total Corona Case's In South Africa:- 482169 lakhs</p>
+
+      <p>Population Rank Of South Africa :- 26</p>
+
+      <p>Region:- Africa</p>
 
     </div>
 
